# agentic-rag

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: bm25_index.pkl  build_specs_db.py  specs.db
data/chroma_db/: chroma.sqlite3
data/corpus/: 01_rag_fundamentals.md  02_agentic_rag_patterns.md  03_vector_databases.md  04_embedding_models.md  05_chunking_strategies.md  06_hybrid_retrieval.md  07_llm_finetuning_methods.md  08_quantization_techniques.md  09_inference_optimization.md  10_on_prem_ai_infrastructure.md  11_storage_for_ai_workloads.md  12_rag_evaluation_metrics.md
eval/: compare_modes.py  llm_judge_eval.py  run_eval.py  test_cases.py
eval/results/: eval_results.json
src/: llm_utils.py  mcp_server.py
src/agent/: __init__.py  graph.py  llm_factory.py  parsing.py  prompts.py  state.py
src/retrieval/: __init__.py  embeddings.py  ingest.py  model_assets.py  retriever.py
src/tools/: __init__.py  specs_tool.py  web_tool.py
tests/: test_embeddings.py  test_graph_parsing.py  test_llm_utils.py  test_model_tiering.py  test_prompt_building.py  test_retrieval.py  test_specs_tool.py  test_traditional_graph.py
ui/: analytics_page.py  app.py  chat_page.py  config.py  documents_page.py  resources.py  settings_page.py  sidebar.py  sources_page.py  styles.py
