[project]
name = "agentic-rag"
version = "0.1.0"
description = "Agentic RAG over an AI/LLM infrastructure knowledge base (LangGraph + hybrid retrieval + Groq)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langgraph==1.2.9",
    "langchain==1.3.13",
    "langchain-groq==1.1.3",
    "langchain-community==0.4.2",
    "langchain-chroma==1.1.0",
    "langchain-core==1.4.9",
    "langchain-text-splitters==1.1.2",
    "chromadb==1.5.9",
    "rank-bm25==0.2.2",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "numpy==1.26.4",
    "groq==0.37.1",
    "streamlit==1.59.2",
    "python-dotenv==1.2.2",
    "tavily-python==0.7.26",
    "mcp==1.28.1",
    "requests==2.34.2",
    "torch>=2.0",
    "sentence-transformers>=3.0",
    # Linux only -- works around Streamlit Community Cloud's base image
    # shipping a libsqlite3 too old for chromadb (see app.py's sqlite3
    # patch and requirements.txt for the full explanation). No Windows
    # wheel exists for this package, so this marker keeps it out of
    # local Windows dev installs entirely.
    "pysqlite3-binary==0.5.4.post2; sys_platform == 'linux'",
]

[tool.uv]
package = false
# Windows + AVG Antivirus only: AVG's HTTPS-inspection re-signs outbound
# TLS with its own root cert. uv uses its own (Rust) TLS stack, not
# Python's, so the SSL_CERT_FILE/REQUESTS_CA_BUNDLE vars in .env don't
# help it -- system-certs makes uv trust the OS certificate store
# instead (where AVG's cert is already trusted for everything else).
# Harmless if you don't have AVG.
system-certs = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "pytest==9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
